--- a/renv.tex
+++ b/renv.tex
@@ -4,8 +4,8 @@
 %
 \documentclass[
 ]{book}
-\usepackage{amsmath,amssymb}
 \usepackage{lmodern}
+\usepackage{amssymb,amsmath}
 \usepackage{ifxetex,ifluatex}
 \ifnum 0\ifxetex 1\fi\ifluatex 1\fi=0 % if pdftex
   \usepackage[T1]{fontenc}
@@ -41,8 +41,7 @@
   hidelinks,
   pdfcreator={LaTeX via pandoc}}
 \urlstyle{same} % disable monospaced font for URLs
-\usepackage{longtable,booktabs,array}
-\usepackage{calc} % for calculating minipage widths
+\usepackage{longtable,booktabs}
 % Correct order of tables after \paragraph or \subparagraph
 \usepackage{etoolbox}
 \makeatletter
@@ -78,15 +77,12 @@
 \makeatother
 
 \renewcommand\chaptername{}
-\ifluatex
-  \usepackage{selnolig}  % disable illegal ligatures
-\fi
 \usepackage[]{natbib}
 \bibliographystyle{apalike}
 
 \title{Environment}
 \author{Dyrehaugen Web Notebook}
-\date{2021-06-27}
+\date{2021-10-03}
 
 \begin{document}
 \maketitle
@@ -109,6 +105,49 @@ It too has got its own site/book.
 \hypertarget{sustainability}{%
 \chapter{Sustainability}\label{sustainability}}
 
+\hypertarget{un-sustainability-goals}{%
+\section{UN Sustainability Goals}\label{un-sustainability-goals}}
+
+\emph{Beslik}
+
+The United Nations General Assembly adopted 17 global sustainable development goals (SDGs) in 2015, which may be described as our---humanity's---global strategy for a sustainable world:
+
+1 End all forms of poverty, everywhere.
+
+2 End hunger, achieve food security, improve nutrition, and promote sustainable agriculture.
+
+3 Ensure healthy lives and promote well-being for all.
+
+4 Ensure inclusive and equitable quality education and promote lifelong learning opportunities for all.
+
+5 Achieve gender equality and empower all women and girls.
+
+6 Ensure availability and sustainable management of water and sanitation for all.
+
+7 Ensure access to affordable, reliable, sustainable, and modern energy for all.
+
+8 Promote sustained, inclusive, and sustainable economic growth, full and productive employment, and decent work for all.
+
+9 Build resilient infrastructure, promote inclusive and sustainable industrialization, and foster innovation.
+
+10 Reduce income inequality within and among countries.
+
+11 Make cities and human settlements inclusive, safe, resilient, and sustainable.
+
+12 Ensure sustainable consumption and production patterns.
+
+13 Take urgent action to combat climate change and its impacts by regulating emissions and promoting developments in renewable energy.
+
+14 Conserve and sustainably use the oceans, seas, and marine resources for sustainable development.
+
+15 Protect, restore, and promote sustainable use of terrestrial ecosystems, sustainably manage forests, combat desertification, and halt and reverse land degradation and halt biodiversity loss.
+
+16 Promote peaceful and inclusive societies for sustainable development, provide access to justice for all and build effective, accountable, and inclusive institutions at all levels.
+
+17 Strengthen the means of implementation and revitalize the global partnership for sustainable development.
+
+{[}Beslik (2021) \url{https://esgonasunday.substack.com/p/week-33-where-the-money-tree-grows})
+
 \hypertarget{global-suicide}{%
 \section{Global Suicide}\label{global-suicide}}
 
@@ -122,6 +161,307 @@ What policy wonks call ``absolute decoupling''---the only kind that would do the
 \href{https://newrepublic.com/article/161575/climate-change-effects-hurtling-toward-global-suicide}{Ehrenreich (2021) New Republic}
 
 \href{https://www.frontiersin.org/articles/10.3389/fcosc.2020.615419/full}{Bradshaw (2020) Frontiers of Conservation Science}
+
+\hypertarget{resilience}{%
+\chapter{Resilience}\label{resilience}}
+
+\hypertarget{de-complexification}{%
+\section{De-complexification}\label{de-complexification}}
+
+\emph{King Abstract}
+
+Human civilisation has undergone a continuous trajectory of rising sociopolitical com-
+plexity since its inception; a trend which has undergone a dramatic recent acceleration. This phe-
+nomenon has resulted in increasingly severe perturbation of the Earth System, manifesting recently
+as global-scale effects such as climate change. These effects create an increased risk of a global `de-
+complexification' (collapse) event in which complexity could undergo widespread reversal. `Nodes
+of persisting complexity' are geographical locations which may experience lesser effects from `de-
+complexification' due to having `favourable starting conditions' that may allow the retention of a
+degree of complexity. A shortlist of nations (New Zealand, Iceland, the United Kingdom, Australia
+and Ireland) were identified and qualitatively analysed in detail to ascertain their potential to form
+`nodes of persisting complexity' (New Zealand is identified as having the greatest potential). The
+analysis outputs are applied to identify insights for enhancing resilience to `de-complexification'.
+
+\emph{King Memo}
+
+The globe-spanning, energy-intensive industrial civilisation that characterises the
+modern era represents an anomalous situation when it is considered against the majority
+of human history.
+
+The major shift resulting from the spread of agriculture led to consistent energetic and
+material surpluses which, in turn, allowed for the establishment of fixed urban settlements,
+hierarchal societies and organisational complexity such as labour specialisation. The
+emergence of these phenomena set in motion enhancing feedback mechanisms (e.g., food
+surpluses) that led to increasing populations and the spatial expansion of agriculture and
+human activity over the majority of the Earth.
+
+The growth of the extent and complexity
+of human civilisation continued for centuries but was ultimately constrained by reliance
+on natural flows of energy (primarily insolation captured through photosynthesis and
+the availability of biomass in which it was stored) and the application of human/animal
+muscle power to utilise energy and material resources. Overcoming this limit commenced
+from approximately 1800 (the start of the Industrial Revolution) through the large-scale
+exploitation of the very large energy stock contained within fossil carbon deposits using
+newly developed technologies.
+
+The global population and industrial capacity
+grew rapidly for approximately 150 years but achieved near-exponential growth only
+from approximately the middle of the 20th century. This period, characterised as the
+`Great Acceleration', has generated the most rapid and profound of all the changes
+described above, resulting from the strengthening of the feedbacks initiated at the start of
+the Industrial Revolution.
+
+The `Great Acceleration' is characterised by substantial and ongoing increases in
+societal complexity and the extent and intensity of human activities across a broad spectrum
+of measures.
+The aggregate effect of this dramatic growth
+has been the strong and increasing perturbation of the Earth system and the biosphere,
+making collective human civilisation a major force acting at global scale.
+
+From a biophysical perspective, human civilisation is a non-equilibrium thermodynamic
+or dissipative system that must maintain a minimum level of available exergy
+to avoid entropic decay and a yet higher level to permit physical growth. From the
+ecological economics perspective, it can be viewed as an `economic superorganism' that
+seeks to maximise energy consumption through self-organisation at a large scale, or the
+`megamachine' driven to ever greater size and scope by the enhancing feedbacks of capital
+accumulation.
+
+The Earth System is, however, finite in spatial extent, energetic capacity and overall
+complexity, and the ongoing expansion of human endeavours has and will continue to
+result in the Earth System's limits being exceeded and the system being moved out of
+equilibrium. The Earth System (characterised as `Gaia') is a self-regulating mechanism {[}6{]},
+and observable shifts in the behaviour of Earth Systems may be manifestations of balancing
+feedbacks resulting from the strong and growing perturbation from human activities. These
+may have the potential to fundamentally undermine the agriculture-based civilisation that
+has flourished in benign Holocene conditions.
+
+Four major categories of threats to the ongoing
+viability of the high-intensity civilisation has emerged from the `Great Acceleration'.
+These phenomena are
+
+\begin{itemize}
+\tightlist
+\item
+  encountering of limits;
+\item
+  diminishment of returns;
+\item
+  ecological destruction;
+\item
+  `risk multipliers'.
+\end{itemize}
+
+The peak use rates across multiple crucial resource types shows that
+numerous resources had a synchrony of peak use centred on the year 2006. The
+phenomenon has implications in terms of the capacity of global society to adapt to physical
+scarcity given that limits on the availability of multiple resources may have to be managed
+simultaneously, and this may constrain the capacity for substitution and `de-coupling' of
+resource use
+
+The availability of high EROI energy
+sources (that provide an `excess' of energy) can be linked with socioeconomic complexity
+and `higher' societal functions (e.g., education, health care, culture) that are indicative of
+higher living standards. `Traditional' fossil fuels have provided a high EROI value for many
+decades, but the decline in the quality and accessibility (and therefore EROI) of these fuels,
+in parallel with the generally lower net energy provided by other energy sources, could
+result in a reduction in global economic output and quality of life.
+A transition to an energy system with a high
+proportion of renewables may lead to an `energy trap'.
+
+Application of predator--prey population dynamics models to assess
+the evolution of four factors (`elites/commoners/nature/wealth'),
+identifies that (economic) `elites' preying on resources and the labour of `commoners' can
+lead to economic stratification and ecological strain and, ultimately, irreversible societal
+collapse.
+
+Sociopolitical complexity has been fundamental to the functioning and success of human
+societies post the Agricultural Revolution {[}28{]} and is described as the collective problem-
+solving and efficiency-seeking strategies deployed by all organised human societies in re-
+sponse to encountering problems, constraints (e.g., energy or water) or aspirations. It may
+include: `bureaucracy' in the form of governments; specialisation of roles, occupations and
+industries; new technologies; and increased mobility and trade. The sociopolitical com-
+plexity (hereafter complexity) provides marginal gains (i.e., net benefits) when initially
+deployed, but as further complexity is added, the marginal gains diminish in an inversely
+proportional manner. The subsequent progression through zero and then negative marginal
+benefit is posited as the factor consistent with societal collapses (in varied locations and time-frames) throughout history.
+Applying simple system dynamic models demonstrates the tendency for
+complexity to peak and then diminish.
+
+The sixth extinction episode (or alternatively, the
+Holocene Extinction Event) is currently ongoing, meaning that Earth's biosphere is
+currently under pressure at levels which occur only infrequently even over geological
+timescales.
+
+The advent of the `Great Acceleration'.
+The short timescale on which these impacts have grown, along with their sheer scope and
+extent, has resulted in \textless3\% of the world's land surface area remaining as `fundamentally
+intact', i.e., with species diversity and habitats unaffected by human activity.
+
+The propensity for humans to destroy forest ecosystems gives a high probability (\textgreater90\%)
+that global civilisation is very likely to suffer a catastrophic collapse in future (within a few decades).
+
+The current extinction event also differs in that it is driven by the concurrence
+of phenomena unique to human actions including changes in land and sea use; direct
+exploitation of animals and plants; climate change; pollution; and invasive alien species.
+It is also characterised by unique Anthropocene features, such as the introduction of a
+global `plastics cycle', which pose an as-yet unknown threat to the stability of global
+ecosystems, and by extension, complex human civilisation.
+
+Climate change can be described as a `hyperobject' {[}40{]}, which
+are entities that have spatial and temporal scope and dimensions far beyond that of the
+human realm. The human system, when considered as an economic `superorganism' {[}1,5{]}
+(a decentralised, energy-consuming structure that is emergent at global scale) may also be
+continuous with the `climate hyperobject' given that it `excretes' greenhouse gases.
+The self-organising tendencies of these `hyperobjects', which seek growth even where
+biophysical limits and environmental destruction constrain them, means that the prospects
+for reduction and reversal of greenhouse gas emissions are limited and accelerating feed-
+back mechanisms have the potential to exacerbate this tendency.
+
+The increasing hyper-connectivity of the globalised economy
+is a process characterised by the reduction in
+system resilience in favour of increased efficiency and complexity, which may increase the
+risk of initially small disturbances being subject to enhancing feedbacks that spread and
+potentially eventually create system-level threats
+
+An alternative
+viewpoint is that complex, integrated societies have a natural resilience to a range of
+stresses and shocks, i.e., that they tend to self-correct when internal and external shocks
+occur (e.g., as seen in the response to the `Global Financial Crisis'). However, perturbation
+in excess of `tipping point' thresholds can create propagations leading to major changes in
+the state of such systems.
+
+The risks of large-scale failures due to
+increasing globalisation, complexification, interdependency and the speed of fundamental
+societal support systems (particularly in the more developed regions of the world) creates
+significant global risks. This is particularly acute for the proportion of the human
+population that is entirely reliant on systems such as automated wastewater management and
+industrial food production (i.e., large urban populations). Furthermore, the global system
+may now have moved beyond human control or understanding
+
+The first objective of this analysis is to define and underpin a `shortlist'
+of nations which have inherent natural and anthropogenic characteristics that in combi-
+nation are likely to comprise `favourable starting conditions'. This shortlist will need to
+take account of the factors that are of the greatest relevance to the potential nature of a
+`de-complexification' event to identify which conditions may interact with such an event to
+give a higher probability of allowing a degree of complexity to persist.
+The methodology for the identification of `shortlisted' nations is based around the
+extrapolation and further analysis of the outputs of the `University of Notre Dame---Global
+Adaptation Index' (ND-GAIN) study. This is a study that considers a range of factors
+relating to the potential for climate change to disrupt different nations around the world. It
+gathers and processes a range of different variables to generate indicators of vulnerability
+to climate disruptions and readiness to mobilise adaptive actions. The overall output
+of the study is a combined score for each nation in the world and a ranking of nations
+according to proneness to climate change.
+
+\href{https://www.mdpi.com/2071-1050/13/15/8161/htm}{King (2021) Nodes of Persisting Complexity}
+\href{pdf/King_2021_Nodes\%20of_Persisting_Complexity.pdf}{(pdf)}
+
+\emph{Motesharrei Abstract}
+
+There are widespread concerns that current trends in resource-use are unsustainable, but possibilities of
+overshoot/collapse remain controversial. Collapses have occurred frequently in history, often followed by centu-
+ries of economic, intellectual, and population decline. Many different natural and social phenomena have been
+invoked to explain specific collapses, but a general explanation remains elusive.
+In this paper, we build a human population dynamics model by adding accumulated wealth and economic in-
+equality to a predator--prey model of humans and nature. The model structure, and simulated scenarios that
+offer significant implications, are explained. Four equations describe the evolution of Elites, Commoners, Nature,
+and Wealth. The model shows Economic Stratification or Ecological Strain can independently lead to collapse, in
+agreement with the historical record.
+The measure ``Carrying Capacity'' is developed and its estimation is shown to be a practical means for early detec-
+tion of a collapse. Mechanisms leading to two types of collapses are discussed. The new dynamics of this model
+can also reproduce the irreversible collapses found in history. Collapse can be avoided, and population can reach a
+steady state at maximum carrying capacity if the rate of depletion of nature is reduced to a sustainable level and if
+resources are distributed equitably.
+
+\includegraphics{fig/handy_unequal.jpg}
+
+\emph{Motesharrei Memo}
+
+n this paper we attempt to model collapse mathematically in a more
+general way. We propose a simple model, not intended to describe actu-
+al individual cases, but rather to provide a general framework that
+allows carrying out ``thought experiments'' for the phenomenon of
+collapse and to test changes that would avoid it. This model (called
+HANDY, for Human and Nature DYnamics) advances beyond existing
+biological dynamic population models by simultaneously modeling
+two separate important features which seem to appear across so
+many societies that have collapsed: (1) the stretching of resources due
+to the strain placed on the ecological carrying capacity
+and (2) the economic stratification of society into Elites and
+Masses (or ``Commoners'')
+
+HANDY is based on the classical predator--prey model, the
+inclusion of two societal classes introduces a much richer set of dynam-
+ical solutions, including cycles of societal and ecological collapse, as well
+as the possibility of smoothly reaching equilibrium (the ecological car-
+rying capacity). We use Carrying Capacity in its biological definition:
+the population level that the resources of a particular environment
+can sustain over the long term.
+
+HANDY was
+originally built based on the predator--prey model. We can think of
+the human population as the ``predator'', while nature (the natural
+resources of the surrounding environment) can be taken as the ``prey'',
+depleted by humans. In animal models, carrying capacity is an upper
+ceiling on long-term population. When the population surpasses the
+carrying capacity, mechanisms such as starvation or migration bring
+the population back down. However, in the context of human societies
+the population does not necessarily begin to decline upon passing the
+threshold of carrying capacity, because, unlike animals, humans can
+accumulate large surpluses (i.e., wealth) and then draw down those re-
+sources when production can no longer meet the needs of consumption.
+This introduces a different kind of delay that allows for much more com-
+plex dynamics, fundamentally altering the behavior and output of the
+model. Thus, our model adds the element of accumulated surplus not
+required in animal models, but which we feel is necessary for human
+models. We call this accumulated surplus ``wealth''.
+
+Empirically, however, this accumulated surplus is not evenly distrib-
+uted throughout society, but rather has been controlled by an elite. The
+mass of the population, while producing the wealth, is only allocated a
+small portion of it by elites, usually at or just above subsistence levels.
+Based on this, and on the historical cases discussed in the introduction,
+we separated the population into ``Elites'' and ``Commoners'', and introduced
+a variable for accumulated wealth.
+
+This adds a different dimension of predation whereby
+Elites ``prey'' on the production of wealth
+by Commoners. As a result, HANDY consists of four prediction equations:
+two for the two classes of population, Elites and Commoners,
+denoted by \(x_E\) and \(x_C\) , respectively; one for the natural resources or
+Nature, \(y\); and one for the accumulated Wealth, \(w\), referred to hereafter
+as ``Wealth''. This minimal set of four equations seems to capture essential
+features of the human--nature interaction and is capable of producing
+major potential scenarios of collapse or transition to steady state.
+
+A similar model of population and renewable resource dynamics
+based on the predator--prey model was developed in the pioneering
+work of Brander and Taylor (1998) demonstrating that reasonable
+parameter values can produce cyclical ``feast and famine'' patterns of
+population and resources.
+The BT approach only models Population and Nature and
+does not include a central component of these historical cases: economic
+stratification and the accumulation of wealth.
+
+We have found that including economic
+stratification, in the form of the introduction of Elites and Commoners,
+as well as accumulated Wealth, results in a much richer variety of solutions,
+which may have a wider application across different types of societies.
+HANDY's structure also allows for ``irreversible'' collapses, without
+the need to introduce an explicit critical depensation mechanism into
+the model.
+
+A decline in the
+price of a resource is usually thought to reflect an increase in the
+abundance of that resource, but in fact, it often reflects that the resource is
+simply being extracted more rapidly.
+
+Over the long-term, per capita resource-use has
+tended to rise over time despite dramatic technological advances in
+resource efficiency.
+
+\href{https://www.sciencedirect.com/science/article/pii/S0921800914000615}{Motesharrei (2014) Human and nature dynamics (HANDY)}
+\href{pdf/Motesharrei_2014_HANDY_Human_and_Nature_Dynamics.pdf}{(pdf)}
 
 \hypertarget{anthropocene}{%
 \chapter{Anthropocene}\label{anthropocene}}
@@ -248,11 +588,11 @@ The global mass of of produced plastic is greater than the overall mass of all t
 
 \begin{longtable}[]{@{}ll@{}}
 \toprule
-Living Biomass & Human-mademass \\ \addlinespace
+Living Biomass & Human-mademass\tabularnewline
 \midrule
 \endhead
-Animals 4 Gt & Plastic 8 Gt \\ \addlinespace
-Trees 900 Gt & Buildings 1100 Gt \\ \addlinespace
+Animals 4 Gt & Plastic 8 Gt\tabularnewline
+Trees 900 Gt & Buildings 1100 Gt\tabularnewline
 \bottomrule
 \end{longtable}
 
@@ -1230,6 +1570,13 @@ In reality, threats to biodiversity could be considerably greater than those we 
 \hypertarget{mass-extinction}{%
 \chapter{Mass Extinction}\label{mass-extinction}}
 
+\emph{Bendell}
+
+The last mass extinction of life on earth, where 95\% of species disappeared,
+was due to methane-induced rapid warming of the atmosphere (Lee, 2014; Brand et al, 2016).
+
+\href{pdf/\%20Bendell_2020_Deep_Adaptation.pdf}{Bendell (2018) Deep Adaption: A Map for Navigating Climate Tradegy (pdf)}
+
 \hypertarget{coral-reefs}{%
 \section{Coral Reefs}\label{coral-reefs}}
 
@@ -1728,6 +2075,31 @@ Regulation of fisheries does not always take into account biologically or scient
 
 \href{https://www.theguardian.com/environment/2021/apr/27/regulators-missing-pollutions-effect-on-marine-life-study-finds}{Guardian}
 
+\hypertarget{pesticides}{%
+\subsection{Pesticides}\label{pesticides}}
+
+\emph{Jones}
+
+When different pesticides mix together, as they often do on farms, they can amplify the effect of one another, according to a new \href{https://www.nature.com/articles/s41586-021-03787-7}{study} published in the journal Nature. In deadly combination, they can be even more damaging to bees. \href{https://www.fisheries.noaa.gov/feature-story/pesticide-mixtures-deadly-synergy-salmon}{Previous research} has found that these ``synergies'' can harm fish and other creatures, too.
+
+What's most troubling is that regulators in the US and elsewhere don't take the dangers of these interactions fully into account --- even though they've long been aware of them. The Environmental Protection Agency, which oversees pesticides in the US, effectively ignored a recommendation to determine which chemicals farmers most commonly mix together, and what risk those combinations pose to bees. Europe is making more progress, but its regulations still fall short, experts say.
+
+So how exactly do things like pesticides and parasites interact to harm bees?
+
+Siviter and his co-authors answered that question through a meta-analysis, which is essentially a study of studies. First, they combed scientific literature about how multiple stressors affect bees, ultimately turning up 90 papers that had relevant data. They then pooled the results in a large analysis in their own paper that shows which combinations are most deadly.
+
+The analysis revealed especially bad news about pesticides. When present together, multiple chemicals can amplify the effect of one another, the analysis found, making them more deadly than you'd expect if you just added up the sum of their individual effects. (Pesticides, which include insecticides, fungicides, and herbicides, work in a variety of different ways; many insecticides target insects' immune systems.)
+
+All of this matters so much because study after study finds that insects are exposed to more than one chemical at a time. ``When we look for pesticides, whether it's in our water or on our pollinator plants, we're finding them in mixtures,'' Code said.
+
+A \href{https://pubmed.ncbi.nlm.nih.gov/28968582/}{study from 2018}, for example, found as many as seven pesticides per sample of pollen collected by honeybees in Italy, while \href{https://www.sciencedirect.com/science/article/abs/pii/S0269749121001445\#}{other research} has found residue from more than 20 chemicals in US hives.
+
+The root of the problem may be bureaucracy, not biology. Regulations in the US and Europe have been slow to consider the impacts of pesticide mixtures on pollinator health. To register a chemical, companies typically don't have to test how it might interact with other compounds found on a farm or in the environment.
+
+When doctors prescribe medicines, they're carefully attuned to the ways that different drugs could interact. We would not accept a doctor who didn't understand the impacts of mixing those medicines. We shouldn't accept it for our pesticides either.
+
+\href{https://www.vox.com/22612979/pesticide-mixtures-kill-bees-insects-pollinators}{Jones (2021) Pesticides can amplify each other. Bees have become the victims.}
+
 \hypertarget{sewage}{%
 \section{Sewage}\label{sewage}}
 
@@ -1825,6 +2197,38 @@ A projection of sea ice in the archipelago, supported by WWF, shows that much of
 Global polar bear numbers are projected to decline by 30\% by 2050.
 
 \href{https://arcticwwf.org/species/polar-bear/population/}{WWF}
+
+\emph{Polar Bear Threatened at Svalbard}
+
+Dag Vongraven er ekspert på isbjørn. I elleve år har han ledet en internasjonal gruppe med spesialister på den hvite kjempen, International Union for Conservation of Nature (IUCN).
+
+Før han nå gir ledervervet videre, tegner han et dystert bilde av isbjørnens fremtid.
+
+-- Jeg er redd for at den kommer til å være helt borte fra Svalbard om 50 år.
+
+Vongraven mener vi nå er i starten av en periode som vil føre til isbjørnens utryddelse på Svalbard, om oppvarmingen fortsetter i samme tempo som de siste tiårene.
+
+Årsaken til hans dystre spådom er polhavet og havisen som smelter raskere enn før.
+
+Oppvarmingen skjer dobbelt så raskt som for 25 år siden.
+
+Om femti år frykter Vongraven at flerårsisen vil være helt borte, og isbjørnen med den.
+
+Lite havis = lite mat
+
+Havisen er viktig for isbjørnen. Slik transporterer den seg mellom områder der det er mat og mellom steder der den kan finne hi, forteller isbjørneksperten.
+
+-- Isbjørn klarer ikke å fange ringsel på landet eller i vann. Den er tilpasset til å fange ringsel på isen, sier Vongraven.
+
+Det finnes i dag rundt 26.000 isbjørner i verden, fordelt på 19 ulike delbestander. Barentshavbestanden er mellom 1900 og 3600 isbjørn, ifølge tall fra Norsk Polarinstitutt.
+
+På Svalbard er det cirka 300 «fastboende» isbjørner.
+
+-- Det går linjer tilbake, fra Svalbardtraktaten i 1920, via Svalbardmiljøloven og fram til i dag der det står at man skal bevare dyrelivet på Svalbard. Isbjørnen er selve kroneksempelet på hvor viktig dette er.
+
+Innen 50 år har gått så har vi to tredeler færre isbjørn. Den nye rødlistevurderingen fra gruppa jeg har ledet viser det samme. Det er store endringer, og det er forferdelig trist å jobbe med dette og se utviklingen vi står overfor.
+
+\href{https://www.nrk.no/tromsogfinnmark/mener-isbjorn-kan-vaere-utryddet-pa-svalbard-om-50-ar-1.15559199}{nrk}
 
 \hypertarget{pandemics}{%
 \chapter{Pandemics}\label{pandemics}}
@@ -2350,6 +2754,17 @@ Please click the markers on the map for more information.
 
 \href{https://www.ejatlas.org/}{Environmental Justice Atlas}
 
+\hypertarget{conflict-atlas}{%
+\section{Conflict Atlas}\label{conflict-atlas}}
+
+\emph{El Pais}
+
+A sus 82 años, el economista catalán Joan Martínez Alier pasa cada mañana un par de horas revisando el \href{https://ejatlas.org/?translate=es}{Atlas de la Justicia Ambiental (EJAtlas)} que comenzó con un equipo de trabajo en 2012. Ahora recoge casi 3.500 conflictos en el mundo que requieren de una defensa sólida para resolver problemas con las nucleares, de combustibles fósiles, de gestión de aguas y residuos, de extracción de minerales y materiales de construcción, o de amenaza a la vida de activistas o a la biodiversidad.
+
+Su principal tesis consiste en demostrar que la economía industrial que rige el planeta es ``entrópica'' {[}que genera desorden{]}, no circular: ``La producción y el consumo se basa en buscar materias primas, recursos materiales y naturales que no se reciclan. El 90\% de ellos se convierten en basura, se disipan en un mundo finito y se recurre de nuevo a la extracción para comenzar el proceso'', explica. Y en esta práctica de explotación radican los conflictos que después recogen en el atlas interactivo, donde se acumulan centenares de círculos de colores que los identifican por tipos. Destacan hasta ahora en la costa occidental de Sudamérica, el golfo de Guinea, los países del mar Mediterráneo y en el sudeste asiático.
+
+\href{https://elpais.com/clima-y-medio-ambiente/2021-07-09/los-conflictos-ambientales-no-son-anecdoticos-son-sistemicos.html}{El Pais}
+
 \hypertarget{policy}{%
 \chapter{Policy}\label{policy}}
 
@@ -2453,6 +2868,36 @@ Thanks for visiting!
 
 \hypertarget{news}{%
 \chapter{NEWS}\label{news}}
+
+210704 TFND
+
+An international Taskforce on Nature-related Financial Disclosures (TNFD) launched last month. Over the next two years, the TNFD will develop a framework for corporations and financial institutions to report on nature-related physical and transition risks that include immediate, material financial risks, as well as nature dependencies and impacts and related organisational and societal risks.
+
+This ambitious scope of work has already been endorsed by the G7 finance ministers and, with the TNFD officially under way, nature risk will ascend quickly to claim its place alongside climate risk at the top of board agendas.
+
+\href{https://www.theguardian.com/commentisfree/2021/jul/04/biodiversity-loss-could-wreck-the-global-financial-system-and-its-only-a-matter-of-time}{Guardian}
+
+210703 Treaty to end Virgin Plastic Production
+
+Since the 1950s about 8bn tonnes of plastic has been produced. The effects are everywhere. One of the reports authors, Nils Simon, said: ``Plastics are ubiquitously found in increasing amounts worldwide, including in terrestrial environments and even inside the human body.''
+
+Science senior editor Jesse Smith, writes: ``As for much new technology, their development and proliferation occurred with little consideration for their impacts, but now it's impossible to deny their dark side as we confront a rapidly growing plastic pollution problem.
+
+The report calls for a new global treaty ``to cover the entire lifecycle of plastics, from the extraction of the raw materials needed for its manufacture to its legacy pollution''.
+
+The largest proportion of plastic waste comes from packaging materials (47\%), while textiles are responsible for 14\% and transport 6\%.
+
+Each year, 3\% of worldwide plastic waste ends up in the oceans; in 2010 that amounted to about 8m tonnes of plastic.
+
+Yet plastic production has continued to increase. In 2019, 368m tonnes of newly made, or virgin, plastics were produced. By 2050, the production of new plastic from fossil fuels could consume 10-13\% of the remaining global carbon budget permissible to ensure temperatures rise to no more than 1.5C above pre-industrial levels as required by the Paris climate agreement.
+
+\href{https://www.theguardian.com/environment/2021/jul/01/call-for-global-treaty-to-end-production-of-virgin-plastic-by-2040}{The Guardian}
+
+\emph{Simon}
+
+Amid the global plastic pollution crisis, a growing number of governments and nongovernmental actors are proposing a new global treaty. In February 2021, at the fifth meeting of the United Nations Environment Assembly (UNEA)---the world's highest-level decision-making body on the environment---many governments spoke in favor of an international agreement to combat plastic pollution. In the past, the international community tended to view the plastics problem from a predominantly ocean-focused and waste-centered perspective. However, plastics are increasingly found in all environmental media, including terrestrial ecosystems and the atmosphere, as well as human matrices, including lungs and placenta. We therefore argue for a new international legally binding agreement that addresses the entire life cycle of plastics, from extraction of raw materials to legacy plastic pollution. Only by taking this approach can efforts match the magnitude and transboundary nature of this escalating problem and its social, environmental, and economic impacts. Targeting the full life cycle of plastics allows for a more equitable distribution of the costs and benefits of relevant actions across the global value chain.
+
+\href{https://science.sciencemag.org/content/373/6550/43}{Simon (2021) A binding global agreement to address the life cycle of plastics (paywall)}
 
 210623 Ecocide Defined
 
