--- a/renv.tex
+++ b/renv.tex
@@ -82,7 +82,7 @@
 
 \title{Environment}
 \author{Dyrehaugen Web Notebook}
-\date{2021-10-03}
+\date{2021-11-02}
 
 \begin{document}
 \maketitle
@@ -2767,6 +2767,27 @@ Su principal tesis consiste en demostrar que la economía industrial que rige el
 
 \hypertarget{policy}{%
 \chapter{Policy}\label{policy}}
+
+\hypertarget{strategy}{%
+\section{Strategy}\label{strategy}}
+
+\hypertarget{vml---voluntary-market-led---fix-fails}{%
+\subsection{VML - Voluntary Market Led - fix fails}\label{vml---voluntary-market-led---fix-fails}}
+
+\emph{Austin}
+
+\includegraphics{fig/Market_Led _sustainability_is_a_fix_that_fails.png}
+
+VML stands for two conflicting ideas at once. VML's explicit message is that we must urgently solve social and environmental problems. But the unavoidable, tacit meta-message of VML, as a market-based movement, is that `markets are the solution', which reinforces many of the underlying dynamics that perpetuate the problems.
+
+A sustainability discourse conducted in business and economics terms continues to miss the physics for the finance. Our climate and biodiversity challenges are fundamentally driven by human transformation of matter and energy at a scale and pace that exceeds Nature's capacity to absorb. In response, VML aims to transform the world more sustainably, but the building of a clean economy has simply become the new banner by which we accelerate our transformation of the physical world. We frame the build-out of a clean economy as `greener', but the Earth just registers `yet more' transformation of matter and energy overwhelming natural processes. VML denies that a large part of our sustainability response requires establishing a slower and gentler interaction with Nature to fall back into balance with its pace. Less, not more.
+
+Neoliberalism's capture of environmentalism is virtually complete.
+
+\href{https://www.responsible-investor.com/articles/market-led-sustainability-is-a-fix-that-fails}{Austin (2021) Responsible Investor}
+
+\href{https://bothbrainsrequired.com/2021/10/25/fix-that-fails/}{Austin (2021) Market-led Sustainability is a `Fix that Fails'\ldots\ldots but It May Have Been the Necessary `Defence at First Depth'}
+\href{pdf/Austin_2021_Market_Led_Sustainability_Fix_Fails.pdf}{(pdf)}
 
 \hypertarget{regulations}{%
 \section{Regulations}\label{regulations}}
